# moli-text-editor

./: CMakeLists.txt  main.cpp
function/: f_Encode.cpp  f_Encode.h  f_File.cpp  f_File.h  f_Font.cpp  f_Font.h
manager/: DisplayManager.cpp  DisplayManager.h  InputManager.cpp  InputManager.h  UIManager.cpp  UIManager.h
windows/: WindowFlag.cpp  WindowFlag.h  w_About.h  w_Demo.h  w_Editor.h  w_Info.h  w_MenuBar.h  w_Terminal.h
